renaming classes in visualization and trying to get an  automatic buffer

--- a/examples/meson.build
+++ b/examples/meson.build
@@ -2,5 +2,5 @@
 vis_enabled = get_option('visualization')
 
 if vis_enabled
-  executable('mesh_viewer', 'mesh_viewer.cpp', dependencies: [visualization_dep])
+  #executable('mesh_viewer', 'mesh_viewer.cpp', dependencies: [visualization_dep])
 endif
