--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -43,8 +43,9 @@ jobs:
           version: 2.8.1
 
       - name: Conan profile creation
-        run: conan profile detect
-        run: conan profile update compiler.cppstd=gnu20
+        run: | 
+          conan profile detect
+          conan profile update compiler.cppstd=gnu20
 
       - name: Conan dependencies
         run: conan install . --output-folder=build --build=missing # prepare conan
