--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -33,6 +33,13 @@ jobs:
         with:
           python-version: '3.x'
 
+      - name: Linux dependencies
+        run: |
+          if [ "$RUNNER_OS" == "LinuX" ]; then
+          apt install libgl-dev libgl1-mesa-dev
+          fi
+
+
       - name: Install dependencies
         run: python -m pip install meson==${{ matrix.meson_version }} ninja
 
