--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -36,7 +36,7 @@ jobs:
       - name: Linux dependencies
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
-          apt install libgl-dev libgl1-mesa-dev
+          sudo apt-get install libgl-dev libgl1-mesa-dev
           fi
 
 
