--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -36,6 +36,7 @@ jobs:
       - name: Linux dependencies
         run: |
           if [ "$RUNNER_OS" == "Linux" ]; then
+          sudo apt update
           sudo apt-get install libgl-dev libgl1-mesa-dev
           fi
 
