--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -22,7 +22,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
+        os: [ubuntu-latest, macos-latest]
+        # os: [ubuntu-latest, macos-latest, windows-latest]
         meson_version: ["1.5.2"] #["1.2.0", "1.3.0", "1.4.0"]
     steps:
       - name: Checkout code
