--- a/.github/workflows/continuous.yml
+++ b/.github/workflows/continuous.yml
@@ -45,6 +45,12 @@ jobs:
       - name: Install dependencies
         run: python -m pip install meson==${{ matrix.meson_version }} ninja
 
+      - name: Cache conan 
+        uses: actions/cache@v4
+        with:
+          path: |
+            ~/.conan2
+
       - name: Install Conan
         id: conan
         uses: turtlebrowser/get-conan@main
