--- a/.github/workflows/conan.yaml
+++ b/.github/workflows/conan.yaml
@@ -32,6 +32,10 @@ jobs:
         meson_version: ["1.5.2"] #["1.2.0", "1.3.0", "1.4.0"]
 
     steps:
+
+      - name: Checkout code
+        uses: actions/checkout@v4
+
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
