updates for eigen zipper support

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -22,12 +22,8 @@ endif
 test_iterators= executable('test_iterators', 'test_iterators.cpp', dependencies: [core_dep,catch2_with_main_dep])
 test('iterator test', test_iterators)
 
-eigen_test_sources = [
-  'test_eigen_stl2eigen.cpp',
-  'test_eigen_eigen2span.cpp'
-]
-test_eigen = executable('test_eigen',  eigen_test_sources , dependencies: [core_dep,catch2_with_main_dep])
-test('eigen test', test_eigen)
+
+subdir('eigen')
 
 test_mesh_loading = executable('test_mesh_loading',  'test_mesh_loading.cpp', dependencies: [geometry_dep,catch2_with_main_dep], cpp_args: '-DBALSA_TEST_ASSET_PATH="'+test_asset_dir+'"')
 test('mesh_loading test', test_mesh_loading)
