basic eigen compat works

--- a/meson.build
+++ b/meson.build
@@ -129,7 +129,7 @@ geometry_sources = [
 ]
 
 geometry_required_deps = core_required_deps 
-geometry_required_deps += TBB_dep
+#geometry_required_deps += TBB_dep
 
 if get_option('alembic')
   alembic_dep = dependency('alembic')
