trying to get bounding box to work

--- a/tests/meson.build
+++ b/tests/meson.build
@@ -34,6 +34,7 @@ geometry_test_sources = [
   'test_earclipping.cpp',
   'test_circumcenter.cpp',
   'test_volume.cpp',
+  'test_bounding_box.cpp',
   'test_smallest_enclosing_sphere.cpp',
 ]
 
